# gcmb-pegel-online

./: .env.template  .gitignore  Dockerfile  README.md  api_client.py  generate_gcmb_readmes.py  justfile  main.py  project-instructions.md  pyproject.toml  test_main.py  utils.py
.github/workflows/: renovate.yml
.windsurf/rules/: general-rules.md
gcmb/: README.md
gcmb/ALLER/: README.md
gcmb/BODENSEE/: README.md
gcmb/BSE/: README.md
gcmb/BSK/: README.md
gcmb/DAW/: README.md
gcmb/DEK/: README.md
gcmb/DHK/: README.md
gcmb/DIEMEL/: README.md
gcmb/DONAU/: README.md
gcmb/DYHRMOOR/: README.md
gcmb/EDER/: README.md
gcmb/EGER/: README.md
gcmb/EHK/: README.md
gcmb/EIDER/: README.md
gcmb/ELBE/: README.md
gcmb/ELK/: README.md
gcmb/EMS/: README.md
gcmb/ESK/: README.md
gcmb/ESTE/: README.md
gcmb/FULDA/: README.md
gcmb/FiK/: README.md
gcmb/Freiburger Hafenpriel/: README.md
gcmb/Freiburger_Hafenpriel/: README.md
gcmb/HAMME/: README.md
gcmb/HOW/: README.md
gcmb/HUNTE/: README.md
gcmb/HvK/: README.md
gcmb/ILM/: README.md
gcmb/ILMENAU/: README.md
gcmb/ITTER EDER/: README.md
gcmb/ITTER-EDER/: README.md
gcmb/ITTER_DIEMEL/: README.md
gcmb/ITTER_EDER/: README.md
gcmb/JADE/: README.md
gcmb/Jizera/: README.md
gcmb/KRUECKAU/: README.md
gcmb/KRÜCKAU/: README.md
gcmb/KUESTENKANAL/: README.md
gcmb/KÜSTENKANAL/: README.md
gcmb/LAHN/: README.md
gcmb/LEDA/: README.md
gcmb/LEINE/: README.md
gcmb/LESUM/: README.md
gcmb/LUEHE/: README.md
k8s/: gcmb-pegel-online.yml
utils/: mock_mqtt_publisher.py
(+1612 files in other folders)
